--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         </div>
     </main>
 
-    <div class="attribution">
+    <footer class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Riccardo Ziglio</a>.
-    </div>
+    </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/scripts.js"></script>
 </body>
